--- a/eve-multisell.html
+++ b/eve-multisell.html
@@ -105,6 +105,19 @@ input[type="number"]:focus { outline: none; border-color: var(--cyan); }
 
 .main { padding: 24px; display: flex; flex-direction: column; gap: 20px; }
 
+footer {
+  border-top: 1px solid var(--border);
+  padding: 20px 24px;
+  text-align: center;
+  font-size: 10px;
+  color: var(--text-dim);
+  letter-spacing: 1px;
+  font-family: var(--mono);
+  margin-top: 24px;
+}
+footer a { color: var(--text-dim); text-decoration: none; }
+footer a:hover { color: var(--text-secondary); }
+
 .paste-section { background: var(--bg-panel); border: 1px solid var(--border); border-radius: 4px; overflow: hidden; }
 .section-header { background: var(--bg-deep); border-bottom: 1px solid var(--border); padding: 10px 16px; display: flex; align-items: center; justify-content: space-between; }
 .section-title { font-family: var(--display); font-size: 10px; letter-spacing: 2px; text-transform: uppercase; color: var(--gold); display: flex; align-items: center; gap: 8px; }
@@ -420,6 +433,11 @@ tr.row-danger:hover td { background: rgba(231,76,60,0.10); }
 </div>
 
 <div class="toast" id="toast">✓ Copied to clipboard!</div>
+
+<footer>
+  built by <a href="https://github.com/RedSquared" target="_blank" rel="noopener">RedSquared</a>
+  &nbsp;·&nbsp; powered by Claude AI
+</footer>
 
 <!-- ============================================================
   JAVASCRIPT — all the logic that makes the page work.
