Switch square logo marks from gold to red

--- a/eve-multisell.html
+++ b/eve-multisell.html
@@ -48,14 +48,14 @@ header {
 }
 .logo { display: flex; align-items: center; gap: 10px; flex-shrink: 0; }
 .logo-icon {
-  width: 28px; height: 28px; border: 2px solid var(--gold);
+  width: 28px; height: 28px; border: 2px solid var(--red);
   transform: rotate(45deg); display: flex; align-items: center;
   justify-content: center; flex-shrink: 0;
 }
-.logo-icon::after { content: ''; width: 8px; height: 8px; background: var(--gold); display: block; }
+.logo-icon::after { content: ''; width: 8px; height: 8px; background: var(--red); display: block; }
 a.logo-icon { text-decoration: none; transition: border-color 0.15s; }
-a.logo-icon:hover { border-color: var(--gold-bright); }
-a.logo-icon:hover::after { background: var(--gold-bright); }
+a.logo-icon:hover { border-color: #ff6b5a; }
+a.logo-icon:hover::after { background: #ff6b5a; }
 .logo-text { font-family: var(--display); font-size: 13px; font-weight: 700; letter-spacing: 2px; color: var(--gold-bright); text-transform: uppercase; }
 .logo-sub { font-size: 9px; letter-spacing: 3px; color: var(--text-dim); text-transform: uppercase; display: block; margin-top: -2px; }
 header .sep { width: 1px; height: 32px; background: var(--border); flex-shrink: 0; }
