--- a/EveOrders.html
+++ b/EveOrders.html
@@ -64,11 +64,11 @@
       box-shadow: 0 2px 20px rgba(0,0,0,0.5);
     }
     .logo { display: flex; align-items: center; gap: 10px; user-select: none; flex-shrink: 0; }
-    .logo-icon { width: 28px; height: 28px; border: 2px solid var(--gold); transform: rotate(45deg); display: flex; align-items: center; justify-content: center; flex-shrink: 0; }
-    .logo-icon::after { content: ''; width: 8px; height: 8px; background: var(--gold); display: block; }
+    .logo-icon { width: 28px; height: 28px; border: 2px solid var(--red); transform: rotate(45deg); display: flex; align-items: center; justify-content: center; flex-shrink: 0; }
+    .logo-icon::after { content: ''; width: 8px; height: 8px; background: var(--red); display: block; }
     a.logo-icon { text-decoration: none; transition: border-color 0.15s; }
-    a.logo-icon:hover { border-color: var(--gold-bright); }
-    a.logo-icon:hover::after { background: var(--gold-bright); }
+    a.logo-icon:hover { border-color: #ff6b5a; }
+    a.logo-icon:hover::after { background: #ff6b5a; }
     .logo-text { font-family: var(--display); font-size: 13px; font-weight: 700; letter-spacing: 2px; color: var(--gold-bright); text-transform: uppercase; }
     .logo-sub { font-size: 9px; letter-spacing: 3px; color: var(--text-dim); text-transform: uppercase; display: block; margin-top: -2px; }
     .char-info { display: flex; align-items: center; gap: 10px; }
