--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
   --gold: #c8960c;
   --gold-bright: #f0b429;
   --gold-dim: #7a5a08;
+  --red: #e74c3c;
+  --red-bright: #ff6b5a;
+  --red-dim: #7a1a12;
   --cyan: #00b4cc;
   --cyan-dim: #006a7a;
   --text-primary: #d8e4f0;
@@ -43,11 +46,11 @@ header {
 }
 .logo { display: flex; align-items: center; gap: 10px; }
 .logo-icon {
-  width: 28px; height: 28px; border: 2px solid var(--gold);
+  width: 28px; height: 28px; border: 2px solid var(--red);
   transform: rotate(45deg); display: flex; align-items: center;
   justify-content: center; flex-shrink: 0;
 }
-.logo-icon::after { content: ''; width: 8px; height: 8px; background: var(--gold); display: block; }
+.logo-icon::after { content: ''; width: 8px; height: 8px; background: var(--red); display: block; }
 .logo-text { font-family: var(--display); font-size: 13px; font-weight: 700; letter-spacing: 2px; color: var(--gold-bright); text-transform: uppercase; }
 .logo-sub { font-size: 9px; letter-spacing: 3px; color: var(--text-dim); text-transform: uppercase; display: block; margin-top: -2px; }
 
@@ -96,13 +99,13 @@ header {
   padding: 16px; display: flex; align-items: center; gap: 12px;
 }
 .tool-icon {
-  width: 36px; height: 36px; border: 1.5px solid var(--gold-dim);
+  width: 36px; height: 36px; border: 1.5px solid var(--red-dim);
   transform: rotate(45deg); display: flex; align-items: center;
   justify-content: center; flex-shrink: 0; transition: border-color 0.15s;
 }
 .tool-card:hover .tool-icon { border-color: var(--cyan); }
 .tool-icon::after {
-  content: ''; width: 10px; height: 10px; background: var(--gold-dim);
+  content: ''; width: 10px; height: 10px; background: var(--red-dim);
   display: block; transition: background 0.15s;
 }
 .tool-card:hover .tool-icon::after { background: var(--cyan); }
